# UnitConverter_A_group

./: .cursorrules  .gitignore  ARRR_Teacher_이번수업_PR_자가리뷰.md  README.md  UnitConverter.py  pyproject.toml  run_gui.py  units_corrupt.json
.cursor/: hooks.json
Report/: 01.UnitConvert_ProblemDefinition_Report.md  02.UnitConverter_Session4_CursorDesign_Report.md  03.UnitConverter_Session5_IBAC_RED_KDReport_Report.md  04.UnitConverter_Session6_D-CONV-01_GREEN_Report.md  04.UnitConverter_Session6_RED_Skeletons_Report.md  05.UnitConverter_Session7_GREEN_Merge_U-IN-01_Report.md  06.UnitConverter_Session8_U-IN-02-03_GREEN_Report.md  07.UnitConverter_Session9_Full_GREEN_Report.md  08.UnitConverter_Session10_GoldenMaster_Report.md  09.UnitConverter_Session11_PyQtGUI_Refactor_Report.md  10.UnitConverter_Session12_RefactorSafe_CLI_Report.md  11.UnitConverter_Session13_RefactorSafe_GUI_Entity_Report.md  12.UnitConverter_Session14_P1_NewFeatures_GREEN_Report.md  13.UnitConverter_Session15_P1_Followup_GUI_Smoke_Report.md
docs/: IBAC-BCE-RBS.md  P1_NEW_FEATURES_TODO.md  PRD.md
prompting/: 01.step1-mom-test-prompt.md  02.transcript-export.md  03.UnitConverter_Session3_CursorRulesReview-Transcript.md  04.UnitConverter_Session4_CursorDesign-Transcript.md  05.UnitConverter_Session5_IBAC_RED_KDReport-Transcript.md  06.UnitConverter_Session6_D-CONV-01_GREEN-Transcript.md  06.UnitConverter_Session6_RED_Skeletons-Transcript.md  07.UnitConverter_Session7_GREEN_Merge_U-IN-01-Transcript.md  08.UnitConverter_Session8_U-IN-02-03_GREEN-Transcript.md  (+7 more)
src/boundary/: app.py  (+4 more)
tests/: _approval.py
(+47 files in other folders)
